[gd_scene load_steps=7 format=3 uid="uid://e4tntiw4ikmi"]

[ext_resource type="Texture2D" uid="uid://bg27k5sblx533" path="res://art/objects/Door_01.png" id="1_1sruy"]
[ext_resource type="Script" path="res://interactables/door/door_key.gd" id="1_f6ra5"]

[sub_resource type="Gradient" id="Gradient_5j0co"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5ruhy"]
gradient = SubResource("Gradient_5j0co")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mslxp"]
size = Vector2(70, 130)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qanq6"]
properties/0/path = NodePath(".:is_open")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="DoorKey" type="Node2D"]
script = ExtResource("1_f6ra5")

[node name="DoorClosed" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(2.08165e-12, -70)
scale = Vector2(0.55, 0.55)
texture = ExtResource("1_1sruy")

[node name="DoorOpen" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(2.08165e-12, -65)
scale = Vector2(0.275, 130)
texture = SubResource("GradientTexture1D_5ruhy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -65)
scale = Vector2(1.3, 1)
shape = SubResource("RectangleShape2D_mslxp")

[node name="ExitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(0, -65)
scale = Vector2(1.3, 1)
shape = SubResource("RectangleShape2D_mslxp")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qanq6")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_delta_synchronized"]
